--- a/website/index.html
+++ b/website/index.html
@@ -110,7 +110,7 @@ A <a href=":http://groups.google.com/group/viking">Google Group</a> is available
 	</ul>
 
 
-<pre>git clone git://github.com/jherdman/viking-gem.git</pre>
+<pre>git clone git://github.com/jherdman/viking.git</pre>
 
 	<h3>Build and test instructions</h3>
 
@@ -133,7 +133,7 @@ rake install_gem
 	<p>Comments are welcome. Send an email to <a href="mailto:james.herdman@gmail.com">James Herdman, Jed Hurt, Technoweenie</a> 
 via the <a href=":http://groups.google.com/group/viking">forum</a></p>
     <p class="coda">
-      <a href="james.herdman@gmail.com">James Herdman, Jed Hurt, Technoweenie</a>, 22nd April 2008<br>
+      <a href="james.herdman@gmail.com">James Herdman, Jed Hurt, Technoweenie</a>, 23rd April 2008<br>
       Theme extended from <a href="http://rb2js.rubyforge.org/">Paul Battley</a>
     </p>
 </div>
