--- a/website/index.html
+++ b/website/index.html
@@ -32,7 +32,7 @@
     <h1>VikingGem</h1>
     <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/vikinggem"; return false'>
       <p>Get Version</p>
-      <a href="http://rubyforge.org/projects/vikinggem" class="numbers">0.0.2</a>
+      <a href="http://rubyforge.org/projects/vikinggem" class="numbers">0.0.3</a>
     </div>
     <h2>What</h2>
 
@@ -133,7 +133,7 @@ rake install_gem
 	<p>Comments are welcome. Send an email to <a href="mailto:james.herdman@gmail.com">James Herdman, Jed Hurt, Technoweenie</a> 
 via the <a href=":http://groups.google.com/group/viking">forum</a></p>
     <p class="coda">
-      <a href="james.herdman@gmail.com">James Herdman, Jed Hurt, Technoweenie</a>, 23rd April 2008<br>
+      <a href="james.herdman@gmail.com">James Herdman, Jed Hurt, Technoweenie</a>, 25th April 2008<br>
       Theme extended from <a href="http://rb2js.rubyforge.org/">Paul Battley</a>
     </p>
 </div>
